new changes html

--- a/tabs.css
+++ b/tabs.css
@@ -41,6 +41,5 @@
 .tab .heading{
     font-size: 18px;
     font-family: 'Oswald', sans-serif;
-    color: #343435;
-    color: #2469B0
+    color: #343435
 }
